--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Mindfulness 3574983</string>
+    <string name="breathe">Breathe</string>
+    <string name="todo_list">Todo List</string>
+    <string name="logo">Logo</string>
 </resources>
